@@ -1,3 +1,8 @@
+17 March 2007
+
+* Don't bother passing mail to parent if the user doesn't actually need to be
+  changed. 
+
 16 March 2007
 
 * Change so that the child uses poll(2) on all the fds rather than letting
@@ -146,4 +151,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.41 2007-03-16 23:19:55 nicm Exp $
+$Id: CHANGES,v 1.42 2007-03-17 13:50:37 nicm Exp $
